Bug 15182 - Flush on a named stream never completes
Summary: Flush on a named stream never completes
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.17.0rc5
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-15 19:31 UTC by suinn
Modified: 2022-12-15 16:34 UTC (History)
2 users (show)

See Also:


Attachments
Packet trace (79.76 KB, application/octet-stream)
2022-09-15 19:31 UTC, suinn
no flags Details
git-am fix for master. (8.59 KB, patch)
2022-09-20 22:05 UTC, Jeremy Allison
no flags Details
git-am fix for master. (8.58 KB, patch)
2022-09-21 00:23 UTC, Jeremy Allison
no flags Details
git-am fix for 4.17.next, 4.16.next (10.84 KB, patch)
2022-10-06 23:55 UTC, Jeremy Allison
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description suinn 2022-09-15 19:31:56 UTC
Created attachment 17520 [details]
Packet trace

From SNIA 2022 in Fremont, macOS SMB Client unit test testUpdateLeaseResourceFork ends up sending a SMB Flush on a named stream and the Samba server returns STATUS_PENDING but never sends the actual Flush reply.

Working with Jeremy Allison at SNIA for this bug.
Comment 1 Jeremy Allison 2022-09-15 21:05:34 UTC
I have tracked this down. vfs_fruit needs to add fsync_send_fn/fsync_recv_fn handling, otherwise it passes a fake fd down to the streams_xattr module which causes the flush never to complete.
Comment 2 Jeremy Allison 2022-09-20 22:05:56 UTC
Created attachment 17524 [details]
git-am fix for master.

Fix in gitlab-ci. Adds a test.
Comment 4 Samba QA Contact 2022-10-06 23:05:03 UTC
This bug was referenced in samba master:

1b8a8732848169c632af12b7c2b4cd3ee73be244
35c637f2e6c671acf8fb9c2a67774bd5e74dd7d0
a7fba3ff5996330158d3cc6bc24746a59492b690
Comment 5 Jeremy Allison 2022-10-06 23:55:36 UTC
Created attachment 17545 [details]
git-am fix for 4.17.next, 4.16.next

Cherry-picked from master. Applies cleanly to 4.17.next, 4.16.next.
Comment 6 Jeremy Allison 2022-10-13 16:48:26 UTC
Ralph - ping ! Can I get an RB+ on the cherry-picked fix so we can get it into the next release ?

Thanks,

Jeremy.
Comment 7 Ralph Böhme 2022-10-13 17:13:17 UTC
Reassigning to Jule for inclusion in 4.16 and 4.17.
Comment 8 Jule Anger 2022-10-18 08:32:29 UTC
Pushed to autobuild-v4-{17,16}-test.
Comment 9 Samba QA Contact 2022-10-18 09:42:11 UTC
This bug was referenced in samba v4-16-test:

24bc377a0ec8fc23df22b396b6b30e6b60b39fb7
6c7af4055805041726c5735da5b89f2f7f067aef
3e0ce4513b06f17791c02ab0b4f787f63fe69b9f
Comment 10 Samba QA Contact 2022-10-18 14:29:12 UTC
This bug was referenced in samba v4-17-test:

4c6b7983ed5982c283d9663b447c57e3cc7ea615
54d4b0f607e7169b0044fde254c41b8579dcc903
a1453f16aea30c10a1082f419f7a45424eea8597
Comment 11 Jule Anger 2022-10-18 14:31:08 UTC
Closing out bug report.

Thanks!
Comment 12 Samba QA Contact 2022-10-19 12:25:21 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.1):

4c6b7983ed5982c283d9663b447c57e3cc7ea615
54d4b0f607e7169b0044fde254c41b8579dcc903
a1453f16aea30c10a1082f419f7a45424eea8597
Comment 13 Samba QA Contact 2022-12-15 16:34:45 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.8):

24bc377a0ec8fc23df22b396b6b30e6b60b39fb7
6c7af4055805041726c5735da5b89f2f7f067aef
3e0ce4513b06f17791c02ab0b4f787f63fe69b9f